--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero-section">
         <div class="container">
             <h1 class="hero-headline">Scaling revenue systems for complex consumer businesses.</h1>
-            <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes, so revenue becomes predictable.</p>
+            <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes.</p>
         </div>
     </section>
 
