--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content-block">
                 <h2>What I do</h2>
                 <p>Scaling requires two things: generating demand and converting it reliably into revenue. When the system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
-                <p>I work across demand generation, sales conversion, and revenue operations to see the full system—and fix what’s actually limiting performance. By building a scalable system, we can reduce wasted acquisition spend, spend more on what’s working, and bring your CAC under control.</p>
+                <p>I work across demand generation, sales conversion, and revenue operations to see the full system and fix what’s actually limiting performance. By building a scalable system, we can reduce wasted acquisition spend, spend more on what’s working, and bring your CAC under control.</p>
             </div>
         </div>
     </section>
