--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <div class="content-block">
                 <h2>Who I am</h2>
                 <p>I’m a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve built and scaled revenue systems where growth depends on aligning marketing, sales, operations, product, and technology.</p>
-                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned acquisition through scaling Frontpoint from $50m to $120m, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst.</p>
-                <p>If you’re trying to scale without rising CAC and volatility, I’d love to talk.</p>
+                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned acquisition through doubling of a consumer services to over $100m, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst.</p>
+                <p>If you’re trying to build a scalable revenue system for a complex consumer business, please email me to schedule a conversation.</p>
             </div>
         </div>
     </section>
@@ -103,6 +103,9 @@
 
 <footer>
     <div class="container"></div>
+    <div class="container">
+        <p style="margin: 0; font-size: 0.9rem;">&copy; 2026 Cohen Advisory LLC. All rights reserved.</p>
+    </div>
 </footer>
 
 </body>
