--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="content-block">
                 <h2>What I do</h2>
                 <p>Scaling requires two things: generating demand and converting it reliably into revenue. When the system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
-                <p>I work across demand generation, sales conversion, and revenue operations to see the full system and fix what’s actually limiting performance. By building a scalable system, we can reduce wasted acquisition spend, spend more on what’s working, and bring your CAC under control.</p>
+                <p>I work across demand generation, sales conversion, and revenue operations to see the full system and fix what’s actually limiting performance. By building a scalable system, we can reduce wasted acquisition spend, spend more on what’s working, and bring your CAC under control as you grow.</p>
             </div>
         </div>
     </section>
@@ -70,7 +70,7 @@
                     <li>Leads are coming in, but speed-to-lead and follow-up break down.</li>
                     <li>Marketing and sales get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
                     <li>Dashboards look fine, but when volume increases the system gets fragile.</li>
-                    <li>Decisions about growth are driven by anecdotes rather than evidence.</li>
+                    <li>Decisions about growth are being driven by anecdotes rather than evidence.</li>
                 </ul>
             </div>
         </div>
@@ -83,7 +83,7 @@
                 <h2>How I work</h2>
                 <p>My work is diagnostic-led, economics-driven, and carried through to execution. I start by mapping how revenue actually flows through your system today to find the constraints (where the system breaks) that are limiting profitable growth.</p>
                 <p>I’m technology and platform agnostic. I’ll meet you where you are, work with the stack and team you already have, and recommend changes only when they’re justified by impact and feasibility.</p>
-                <p>From there, I translate the diagnostic into a realistic plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I stay involved through implementation, so improvements stick and performance compounds.</p>
+                <p>From there, I translate the diagnostic into a realistic plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
         </div>
     </section>
@@ -93,8 +93,8 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I am</h2>
-                <p>I’m a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve built and scaled revenue systems where growth depends on aligning marketing, sales, operations, product, and technology.</p>
-                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned acquisition through doubling of a consumer services to over $100m, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst.</p>
+                <p>I’m a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve been builting and scaling revenue systems for complex businesses for over 20 years.</p>
+                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned acquisition through doubling of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College.</p>
                 <p>If you’re trying to build a scalable revenue system for a complex consumer business, please email me to schedule a conversation.</p>
             </div>
         </div>
