--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>Scaling requires two things: generating demand and converting it reliably into revenue. When the system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
-                <p>I work across demand generation, sales conversion, and revenue operations to see the full system and fix what’s actually limiting performance. By building a scalable system, we can reduce wasted acquisition spend, spend more on what’s working, and bring your CAC under control as you grow.</p>
+                <p>Scaling requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
+                <p>I work across demand generation, sales conversion, and revenue operations to see the full system and fix what’s limiting performance. By building a scalable system, we can reduce wasted effort, focus more on what’s working, and bring your CAC under control as your business grows.</p>
             </div>
         </div>
     </section>
