--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="content-block">
                 <h2>How I work</h2>
                 <p>My work is diagnostic-led, economics-driven, and carried through to execution. I start by mapping how revenue actually flows through your system today to find the constraints (where the system breaks) that are limiting profitable growth.</p>
-                <p>I’m technology and platform agnostic. I’ll meet you where you are, work with the stack and team you already have, and recommend changes only when they’re justified by impact and feasibility.</p>
+                <p>I’m platform agnostic and believe technology should strength human relationships, not replace them. I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility.</p>
                 <p>From there, I translate the diagnostic into a realistic plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
         </div>
