--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Scaling revenue systems for complex consumer businesses.</h1>
+            <h1 class="hero-headline">Scaling revenue systems for insurance brokers and RIAs.</h1>
             <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes.</p>
         </div>
     </section>
@@ -52,8 +52,8 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I help</h2>
-                <p>I work with owners, CEOs, and growth leaders in businesses where turning consumer interest into revenue requires orchestration across marketing, sales, operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
-                <p>Most often, this includes insurance brokerages and advisory businesses, financial advisors and wealth management firms, and other high-CAC businesses with multi-step conversion paths.</p>
+                <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
+           
             </div>
         </div>
     </section>
@@ -67,8 +67,8 @@
                 <p><strong>Common signals:</strong></p>
                 <ul class="bullet-list">
                     <li>You increase spend, and CAC rises faster than revenue.</li>
-                    <li>Leads are coming in, but speed-to-lead and follow-up break down.</li>
-                    <li>Marketing and sales get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
+                    <li>Leads are coming in, but follow-up is slow or not happening.</li>
+                    <li>Marketing and business development get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
                     <li>Dashboards look fine, but when volume increases the system gets fragile.</li>
                     <li>Decisions about growth are being driven by anecdotes rather than evidence.</li>
                 </ul>
@@ -95,7 +95,7 @@
                 <h2>Who I am</h2>
                 <p>I’m a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve been builting and scaling revenue systems for complex businesses for over 20 years.</p>
                 <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned acquisition through doubling of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College.</p>
-                <p>If you’re trying to build a scalable revenue system for a complex consumer business, please email me to schedule a conversation.</p>
+                <p>If you’re trying to build a scalable revenue system for an insurance brokerage or RIA, please email me to schedule a conversation.</p>
             </div>
         </div>
     </section>
