--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Scaling revenue systems for insurance brokers and RIAs.</h1>
+            <h1 class="hero-headline">Scaling revenue systems for insurance brokerages and RIAs.</h1>
             <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes.</p>
         </div>
     </section>
