--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             <div class="content-block">
                 <h2>What I do</h2>
                 <p>Scaling requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
-                <p>I work across demand generation, sales conversion, and revenue operations to see the full system and fix what’s limiting performance. By building a scalable system, we can reduce wasted effort, focus more on what’s working, and bring your CAC under control as your business grows.</p>
             </div>
         </div>
     </section>
@@ -52,8 +51,8 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I help</h2>
-                <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
-           
+                <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
+           <p>I’m most valuable when you’re firm is big enough that you have a dedicated marketing and new client acquisition budget, but not so large that you have a 30-person team optimizing it for you.</p> 
             </div>
         </div>
     </section>
@@ -66,7 +65,7 @@
                 <p>Reach out if you’re investing (or about to invest) in growth and something feels off, even if the dashboards look fine.</p>
                 <p><strong>Common signals:</strong></p>
                 <ul class="bullet-list">
-                    <li>You increase spend, and CAC rises faster than revenue.</li>
+                    <li>You increase marketing spend, and CAC rises faster than revenue.</li>
                     <li>Leads are coming in, but follow-up is slow or not happening.</li>
                     <li>Marketing and business development get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
                     <li>Dashboards look fine, but when volume increases the system gets fragile.</li>
@@ -81,7 +80,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>How I work</h2>
-                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I start by mapping how revenue actually flows through your system today to find the constraints (where the system breaks) that are limiting profitable growth.</p>
+                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, sales conversion, and revenue operations specialities. But what matters is that I fix growth problems, typically leading to CAC savings or new sales growth of 20% or more.</p>
                 <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strength human relationships, not replace them. </p>
                 <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
@@ -93,8 +92,8 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I am</h2>
-                <p>I’m a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve been builting and scaling revenue systems for complex businesses for over 20 years.</p>
-                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned acquisition through doubling of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College.</p>
+                <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve been building and scaling revenue systems for complex businesses for over 20 years.</p>
+                <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
                 <p>If you’re trying to build a scalable revenue system for an insurance brokerage or RIA, please email me to schedule a conversation.</p>
             </div>
         </div>
