--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero-section">
         <div class="container">
             <h1 class="hero-headline">Scaling revenue systems for insurance brokerages and RIAs.</h1>
-            <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes.</p>
+            <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes, typically leading to CAC savings or new sales growth of 20% or more.</p>
         </div>
     </section>
 
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>Scaling requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
+                <p>Growing an insurance brokerage or RIA requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
             </div>
         </div>
     </section>
@@ -52,7 +52,7 @@
             <div class="content-block">
                 <h2>Who I help</h2>
                 <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
-           <p>I’m most valuable when you’re firm is big enough that you have a dedicated marketing and new client acquisition budget, but not so large that you have a 30-person team optimizing it for you.</p> 
+           <p>I’m most valuable to firms that are big enough to support a dedicated marketing and new client acquisition budget, but not so large that they have a 25-person team optimizing it.</p> 
             </div>
         </div>
     </section>
