--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero-section">
         <div class="container">
             <h1 class="hero-headline">Scaling revenue systems for insurance brokerages and RIAs.</h1>
-            <p class="hero-subtitle">I diagnose what’s blocking profitable growth, then partner with you to implement the fixes, typically leading to CAC savings or new sales growth of 20% or more.</p>
+            <p class="hero-subtitle">I diagnose what’s blocking profitable growth and partner with you to fix it. My work typically leads to CAC savings or sales growth of 20% or more.</p>
         </div>
     </section>
 
@@ -52,7 +52,7 @@
             <div class="content-block">
                 <h2>Who I help</h2>
                 <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
-           <p>I’m most valuable to firms that are big enough to support a dedicated marketing and new client acquisition budget, but not so large that they have a 25-person team optimizing it.</p> 
+           <p>I’m most valuable to firms that are big enough to need a dedicated marketing and new client acquisition budget, but not so large that they have a 25-person team optimizing it.</p> 
             </div>
         </div>
     </section>
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>How I work</h2>
-                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, sales conversion, and revenue operations specialities. But what matters is that I fix growth problems, typically leading to CAC savings or new sales growth of 20% or more.</p>
+                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, sales conversion, and revenue operations specialities. But what matters is that this approach fixes growth problems, typically leading to CAC savings or new sales growth of 20% or more.</p>
                 <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strength human relationships, not replace them. </p>
                 <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
