--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
             <div class="content-block">
                 <h2>What I do</h2>
                 <p>Growing an insurance brokerage or RIA requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
+<p>I build controllable, predictable systems that do three things:</p>
+                <ol class="bullet-list">
+                    <li>Using organic methods to grow revenue from your existing clients</li>
+                    <li>Converting more leads into new clients (and revenue) by streamlining your acquisition process</li>
+                    <li>Increasing demand and lead volume with more, tighter marketing</li>
+                </ol>
+                <p>My secret sauce is that treating all three as a single revenue system greatly increases the effectiveness of one. Some people refer to this effect as a "flywheel." Let's talk if you'd like to understand it in greater detail.</p>
             </div>
         </div>
     </section>
