--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li>Convert more leads into new clients (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing clients</li>
                 </ul>
-                <p>My secret sauce is that treating all three as a single revenue system greatly increases the effectiveness of each one, because improvements in one carry through and compound in the others. Some people refer to this as the "flywheel effect." Let's talk if you'd like to understand it in greater detail.</p>
+                <p>My secret sauce is that treating all three outcomes as a single revenue system greatly increases the effectiveness of each one, because improvements in one carry through and compound in the others. Some people refer to this as the "flywheel effect." Let's talk if you'd like to understand it in greater detail.</p>
             </div>
         </div>
     </section>
@@ -75,7 +75,7 @@
                     <li>You increase marketing spend, and CAC rises faster than revenue.</li>
                     <li>Leads are coming in, but follow-up is slow or not happening.</li>
                     <li>Marketing and business development get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
-                    <li>Dashboards look fine, but when volume increases the system gets fragile.</li>
+                    <li>You know half your marketing budget is being wasted, but you're not sure which half.</li>
                     <li>Decisions about growth are being driven by anecdotes rather than evidence.</li>
                 </ul>
             </div>
