--- a/index.html
+++ b/index.html
@@ -69,13 +69,15 @@
         <div class="container">
             <div class="content-block">
                 <h2>When to call me</h2>
-                <p>Reach out if you’re investing (or about to invest) in growth and something feels off, even if the dashboards look fine.</p>
+                <p>In most markets, your competitors are hungry to grow, too. So if you're standing still you're falling behind. Reach out if you’re investing in growth and not seeing the results you expect. If something feels off, even if the executive-level reporting look fine.</p>
                 <p><strong>Common signals:</strong></p>
                 <ul class="bullet-list">
-                    <li>You increase marketing spend, and CAC rises faster than revenue.</li>
+                    <li>Marketing spend is up, but CAC is rising faster than revenue.</li>
+                    <li>Lead volume is down, but your marketing spend hasn't changed.</li>
                     <li>Leads are coming in, but follow-up is slow or not happening.</li>
+                    <li>Growth is inconsistent or unreliable and you can't tell where it's coming from.</li>
+                    <li>Renewals are running off and new business isn't filling the gap fast enough.</li>
                     <li>Marketing and business development get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
-                    <li>You know half your marketing budget is being wasted, but you're not sure which half.</li>
                     <li>Decisions about growth are being driven by anecdotes rather than evidence.</li>
                 </ul>
             </div>
@@ -89,7 +91,7 @@
                 <h2>How I work</h2>
                 <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, sales conversion, and revenue operations specialities. But what matters is that this approach fixes growth problems, typically leading to CAC savings or new sales growth of 20% or more.</p>
                 <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strength human relationships, not replace them. </p>
-                <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
+                <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementatison, so improvements stick and performance compounds.</p>
             </div>
         </div>
     </section>
