--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>When to call me</h2>
-                <p>In most markets, your competitors are hungry to grow, too. So if you're standing still you're falling behind. Reach out if you’re investing in growth and not seeing the results you expect. If something feels off, even if the executive-level reporting look fine.</p>
+                <p>In most markets, your competitors are hungry to grow, too. So, if you're standing still you're likely falling behind. Reach out if you’re investing in growth and not seeing the results you expect. If something feels off, even if the executive-level reporting looks fine.</p>
                 <p><strong>Common signals:</strong></p>
                 <ul class="bullet-list">
                     <li>Marketing spend is up, but CAC is rising faster than revenue.</li>
