--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h2>What I do</h2>
                 <p>Growing an insurance brokerage or RIA requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
 <p><strong>I build controllable, predictable systems that do three things:</strong></p>
-                <ol class="number-list">
+                <ol class="bullet-list">
                     <li>Increase demand and lead volume with more, tighter marketing</li>
                     <li>Convert more leads into new clients (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing clients</li>
