--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <div class="content-block">
                 <h2>How I work</h2>
                 <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, sales conversion, and revenue operations specialities. But what matters is that this approach fixes growth problems, typically leading to CAC savings or new sales growth of 20% or more.</p>
-                <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strength human relationships, not replace them. </p>
-                <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementatison, so improvements stick and performance compounds.</p>
+                <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strengthen human relationships, not replace them. </p>
+                <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
         </div>
     </section>
