--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="content-block">
                 <h2>Who I help</h2>
                 <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
-           <p>I’m most valuable to firms that are big enough to need a dedicated marketing and new client acquisition budget, but not so large that they have a 25-person team optimizing it.</p> 
+           <p>I’m most valuable to firms that are large enough to support a dedicated marketing and new client acquisition budget of at least $2 million annually. The bigger your existing budget, the greater the impact of our potential work together. </p> 
             </div>
         </div>
     </section>
