--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Scaling revenue systems for insurance brokerages and RIAs.</h1>
+            <h1 class="hero-headline">Scaling revenue systems for insurance agencies and RIAs.</h1>
             <p class="hero-subtitle">I diagnose what’s blocking profitable growth and partner with you to fix it. My work typically leads to CAC savings or sales growth of 20% or more.</p>
         </div>
     </section>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>Growing an insurance brokerage or RIA requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
+                <p>Growing an insurance agency or RIA requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
 <p><strong>I build controllable, predictable systems that do three things:</strong></p>
                 <ul class="bullet-list">
                     <li>Increase demand and lead volume with more, tighter marketing</li>
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I help</h2>
-                <p>I work with owners, CEOs, and growth leaders in insurance brokerages and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
+                <p>I work with owners, CEOs, and growth leaders in insurance agencies and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
            <p>I’m most valuable to firms that are large enough to support a dedicated marketing and new client acquisition budget of at least $2 million annually. The bigger your existing budget, the greater the impact of our potential work together. </p> 
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <h2>Who I am</h2>
                 <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve been building and scaling revenue systems for complex businesses for over 20 years.</p>
                 <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
-                <p>If you’re trying to build a scalable revenue system for an insurance brokerage or RIA, please email me to schedule a conversation.</p>
+                <p>If you’re trying to build a scalable revenue system for an insurance agency or RIA, please email me to schedule a conversation.</p>
             </div>
         </div>
     </section>
