--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Building revenue systems so insurance agencies and RIAs can win at marketing
+            <h1 class="hero-headline">Building revenue systems so insurance agencies and RIAs can win at marketing.
 </h1>
-            <p class="hero-subtitle">I diagnose what’s blocking profitable growth and partner with you to fix it. My work typically leads to CAC savings or sales growth of 20% or more.</p>
+            <p class="hero-subtitle">My work typically leads to CAC savings or sales growth of 20% or more.</p>
         </div>
     </section>
 
