--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Building revenue systems so insurance agencies and RIAs can win at marketing.
+            <h1 class="hero-headline">Building revenue systems so insurance agencies and RIAs can finally win at marketing.
 </h1>
             <p class="hero-subtitle">My work typically leads to <strong>cost savings or sales growth of 20% or more</strong>.</p>
         </div>
