--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Building reliable revenue systems to scale insurance and wealth businesses
+            <h1 class="hero-headline">Building revenue systems to scale consumer service and subscription businesses
 </h1>
-            <p class="hero-subtitle">This is modern marketing and typically leads to <strong>cost savings or sales growth of 20% or more</strong>.</p>
+            <p class="hero-subtitle">This is full-stack marketing and typically leads to <strong>cost savings or sales growth of 20% or more</strong>.</p>
         </div>
     </section>
 
