--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>Growing an insurance agency or RIA requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
+                <p>Growing a consumer services or subscription business requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
 <p><strong>I build controllable, predictable systems that do three things:</strong></p>
                 <ul class="bullet-list">
                     <li>Increase demand and lead volume with more, tighter marketing</li>
-                    <li>Convert more leads into new clients (and revenue) by streamlining your acquisition process</li>
-                    <li>Use organic methods to grow revenue from your existing clients</li>
+                    <li>Convert more leads into new customers (and revenue) by streamlining your acquisition process</li>
+                    <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
                 <p>My secret sauce is that treating all three outcomes as a single revenue system greatly increases the effectiveness of each one, because improvements in one carry through and compound in the others. Some people refer to this as the "flywheel effect." Let's talk if you'd like to understand it in greater detail.</p>
             </div>
@@ -59,8 +59,8 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I help</h2>
-                <p>I work with owners, CEOs, and growth leaders in insurance agencies and RIAs where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, business development, client operations, and technology. When that orchestration breaks down, costs climb quickly and performance drops.</p>
-           <p>I’m most valuable to firms that are large enough to support a dedicated marketing and new client acquisition budget of at least $2 million annually. The bigger your existing budget, the greater the impact of our potential work together. </p> 
+                <p>I work with owners, CEOs, and growth leaders in consumer businesses where turning consumer interest into revenue (and keeping it) requires orchestration across marketing, sales, client operations, product, and/or technology. When that orchestration breaks down, costs climb quickly and performance drops. This includes insurance, wealth, lending, home services, and other high CAC industries.</p>
+           <p>I’m most valuable to firms that are large enough to support a dedicated marketing and new client acquisition budget of at least several million dollars annually. The bigger your existing budget, the greater the impact of our potential work together. </p> 
             </div>
         </div>
     </section>
@@ -78,7 +78,7 @@
                     <li>Leads are coming in, but follow-up is slow or not happening.</li>
                     <li>Growth is inconsistent or unreliable and you can't tell where it's coming from.</li>
                     <li>Renewals are running off and new business isn't filling the gap fast enough.</li>
-                    <li>Marketing and business development get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
+                    <li>Marketing and sales get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
                     <li>Decisions about growth are being driven by anecdotes rather than evidence.</li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>How I work</h2>
-                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, sales conversion, and revenue operations specialities. But what matters is that this approach fixes growth problems, typically leading to CAC savings or new sales growth of 20% or more.</p>
+                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. But what matters is that this approach fixes growth problems, typically leading to cost savings or new sales growth of 20% or more.</p>
                 <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strengthen human relationships, not replace them. </p>
                 <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
@@ -102,9 +102,9 @@
         <div class="container">
             <div class="content-block">
                 <h2>Who I am</h2>
-                <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, financial advisory, credit, and other consumer businesses. I’ve been building and scaling revenue systems for complex businesses for over 20 years.</p>
+                <p>I’m Ross Cohen, a revenue and growth executive with repeated P&L ownership across insurance, lending, and other consumer businesses. I’ve been building and scaling revenue systems for complex consumer businesses for over 20 years.</p>
                 <p>I’ve led work that improved close rates, transaction size, and sales productivity at New York Life, owned customer acquisition through the doubling in size of a consumer services business to over $100m in annual revenue, and launched and scaled a major online credit product to over 1M customers at Capital One. I hold an MBA from Wharton, a JD from Harvard, and a BA from Amherst College. My <a href="https://www.linkedin.com/in/recohen">LinkedIn profile</a> has more details. </p>
-                <p>If you’re trying to build a scalable revenue system for an insurance agency or RIA, please email me to schedule a conversation.</p>
+                <p>If you’re trying to build a scalable revenue system for a consumer services or subscription business, please email me to schedule a conversation.</p>
             </div>
         </div>
     </section>
