--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <h1 class="hero-headline">Building revenue systems to scale consumer service and subscription businesses
 </h1>
-            <p class="hero-subtitle">This is full-stack marketing and typically leads to <strong>cost savings or sales growth of 20% or more</strong>.</p>
+            <p class="hero-subtitle"><strong>Save 20% or more</strong> on your customer acquisition costs.</p>
         </div>
     </section>
 
