--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Building revenue systems to scale consumer service and subscription businesses
+            <h1 class="hero-headline">Save 20% or more on your customer acquisition costs without losing volume
 </h1>
-            <p class="hero-subtitle"><strong>Save 20% or more</strong> on your customer acquisition costs.</p>
+            <p class="hero-subtitle"><strong>I build and optimize revenue systems to scale consumer service and subscription businesses.</p>
         </div>
     </section>
 
