--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>Growing a consumer services or subscription business requires three things: First, generating demand. Second, converting it into revenue. Third, retaining that revenue over time. When your system isn’t built to scale, growth gets expensive, fragile, and hard to control.</p>
-<p><strong>I build controllable, predictable systems that do three things:</strong></p>
+                <p>I'm a fractional CMO and growth executive, but I'm not like the other kids. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I'm more like a CFO or COO than a traditional CMO, which makes me pretty unpopular at marketing conventions.</p>
+
+<p>When your revenue system isn’t built to scale, growth gets expensive, fragile, and hard to control. I build controllable, predictable systems that do three things:</p>
                 <ul class="bullet-list">
                     <li>Increase demand and lead volume with more, tighter marketing</li>
                     <li>Convert more leads into new customers (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
-                <p>My secret sauce is that treating all three outcomes as a single revenue system greatly increases the effectiveness of each one, because improvements in one carry through and compound in the others. Some people refer to this as the "flywheel effect." Let's talk if you'd like to understand it in greater detail.</p>
+                <p>My secret sauce is that treating all three outcomes as a single revenue system greatly increases the effectiveness of each one, because improvements in one carry through and compound in the others. Some people call this the "flywheel effect." And it can create huge cost savings for your business.</p>
             </div>
         </div>
     </section>
@@ -75,9 +76,7 @@
                 <ul class="bullet-list">
                     <li>Marketing spend is up, but CAC is rising faster than revenue.</li>
                     <li>Lead volume is down, but your marketing spend hasn't changed.</li>
-                    <li>Leads are coming in, but follow-up is slow or not happening.</li>
                     <li>Growth is inconsistent or unreliable and you can't tell where it's coming from.</li>
-                    <li>Renewals are running off and new business isn't filling the gap fast enough.</li>
                     <li>Marketing and sales get stuck in an argument loop ("leads are bad" vs "follow-up is bad").</li>
                     <li>Decisions about growth are being driven by anecdotes rather than evidence.</li>
                 </ul>
@@ -90,7 +89,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>How I work</h2>
-                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. But what matters is that this approach fixes growth problems, typically leading to cost savings or new sales growth of 15% or more.</p>
+                <p>My work is diagnostic-led, economics-driven, and carried through to execution. I think in systems, not silos, and work across demand generation, funnel conversion, and revenue operations. But what matters is that this approach fixes growth problems, leading to cost savings of 15% or more.</p>
                 <p>I’ll meet you where you are, work with the team and stack you already have, and recommend changes only when they’re justified by impact and feasibility. I’m platform agnostic, and believe technology should strengthen human relationships, not replace them. </p>
                 <p>After an initial diagnostic, I'll create a realistic action plan: sequenced work, clear owners, and an operating cadence that makes progress visible. I am hands on through implementation, so improvements stick and performance compounds.</p>
             </div>
