--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>I'm a fractional CMO and growth executive, but I'm not like the other kids. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I'm more like a CFO or COO than a traditional CMO, which makes me pretty unpopular at marketing conventions.</p>
+                <p>I'm a fractional CMO and growth executive, but I'm not like the other kids. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I'm more like a CFO or COO than a traditional CMO, which makes me pretty unpopular at marketing conferences.</p>
 
 <p>When your revenue system isn’t built to scale, growth gets expensive, fragile, and hard to control. I build controllable, predictable systems that do three things:</p>
                 <ul class="bullet-list">
