--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <h1 class="hero-headline">Save 15% or more on your customer acquisition costs without losing volume
 </h1>
-            <p class="hero-subtitle"><strong>I build and optimize revenue systems to scale consumer service and subscription businesses.</p>
+            <p class="hero-subtitle"><strong>I build revenue systems to save money while scaling consumer service and subscription businesses.</p>
         </div>
     </section>
 
