--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Save 15% or more on your customer acquisition costs without losing volume
+            <h1 class="hero-headline">Lower your customer acquisition costs without losing volume
 </h1>
             <p class="hero-subtitle"><strong>I build revenue systems to save money while scaling consumer service and subscription businesses.</p>
         </div>
@@ -42,7 +42,7 @@
         <div class="container">
             <div class="content-block">
                 <h2>What I do</h2>
-                <p>I'm a fractional CMO and growth executive, but I'm not like the other kids. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I'm more like a CFO or COO than a traditional CMO, which makes me pretty unpopular at marketing conferences.</p>
+                <p>I'm a fractional CMO and growth executive with an unusual POV. My obsession is saving money and building reliable systems as a pathway to growth. I'm not interested in how clever your marketing creative is or what awards it won. I care about making your economics work in a repeatable way at scale. I'm more like a CFO or COO than a traditional CMO, which makes me pretty unpopular at marketing conferences.</p>
 
 <p>I build controllable, predictable systems that do three things:</p>
                 <ul class="bullet-list">
@@ -50,7 +50,7 @@
                     <li>Convert more leads into new customers (and revenue) by streamlining your acquisition process</li>
                     <li>Use organic methods to grow revenue from your existing customers</li>
                 </ul>
-                <p>My secret sauce is that treating all three outcomes as a single revenue system greatly increases the effectiveness of each one, because improvements in one carry through and compound in the others. Some people call this the "flywheel effect." And it can create huge cost savings for your business.</p>
+                <p>I treat all three outcomes as a single revenue system because it greatly increases the effectiveness of each one as improvements in one area carry through and compound in the others. Some people call this the "flywheel effect," but that sounds like a consulting cliche to me. Regardless of name, it can create huge cost savings for your business.</p>
             </div>
         </div>
     </section>
