--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Hero -->
     <section class="hero-section">
         <div class="container">
-            <h1 class="hero-headline">Lower your customer acquisition costs without losing volume
+            <h1 class="hero-headline">Lower your customer acquisition costs without losing revenue
 </h1>
             <p class="hero-subtitle"><strong>I build revenue systems to save money while scaling consumer service and subscription businesses.</p>
         </div>
